--- a/apps/observability/values/prometheus-values.yaml
+++ b/apps/observability/values/prometheus-values.yaml
@@ -59,6 +59,12 @@ grafana:
     hosts:
       - grafana.multithread.com
     tls: []
+  additionalDataSources:
+    - name: Loki
+      type: loki
+      url: http://loki:3100
+      access: proxy
+      isDefault: false
 kubeApiServer:
   enabled: true
 
