--- a/apps/observability/kube-prometheus-stack.yaml
+++ b/apps/observability/kube-prometheus-stack.yaml
@@ -11,10 +11,11 @@ spec:
     targetRevision: "65.2.0"
     helm:
       valueFiles:
-        - values.yaml          
+        - values/prometheus-values.yaml          
   destination:
     server: https://kubernetes.default.svc
     namespace: observability      
+  syncPolicy:
     automated:
       prune: true                
       selfHeal: true              
