--- a/apps/observability/kube-prometheus-stack.yaml
+++ b/apps/observability/kube-prometheus-stack.yaml
@@ -5,13 +5,16 @@ metadata:
   namespace: argocd             
 spec:
   project: default
-  source:
-    repoURL: https://prometheus-community.github.io/helm-charts
-    chart: kube-prometheus-stack
-    targetRevision: "65.2.0"
-    helm:
-      valueFiles:
-        - values/prometheus-values.yaml          
+  sources:
+    - repoURL: https://prometheus-community.github.io/helm-charts
+      chart: kube-prometheus-stack
+      targetRevision: "65.2.0"
+      helm:
+        valueFiles:
+          - $values/apps/observability/values/prometheus-values.yaml
+    - repoURL: https://github.com/KeyssonG/Observabilidade-grafana.git
+      targetRevision: main
+      ref: values
   destination:
     server: https://kubernetes.default.svc
     namespace: observability      
