mudando para tipo LoadBalancer

--- a/apps/observability/values/prometheus-values.yaml
+++ b/apps/observability/values/prometheus-values.yaml
@@ -39,7 +39,7 @@ grafana:
   adminPassword: "admin"  
   defaultDashboardsEnabled: true
   service:
-    type: ClusterIP
+    type: LoadBalancer
   persistence:
     enabled: true
     accessModes:
