--- a/grafana.yaml
+++ b/grafana.yaml
@@ -12,20 +12,8 @@ metadata:
   namespace: monitoring
 type: Opaque
 stringData:
-  admin-user: admin
-  admin-password: admin
-
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: grafana-config
-  namespace: monitoring
-data:
-  grafana.ini: |
-    [server]
-    http_port = 3000
-    domain = localhost
+  GF_SECURITY_ADMIN_USER: admin
+  GF_SECURITY_ADMIN_PASSWORD: admin
 
 ---
 apiVersion: apps/v1
@@ -33,6 +21,8 @@ kind: Deployment
 metadata:
   name: grafana
   namespace: monitoring
+  labels:
+    app: grafana
 spec:
   replicas: 1
   selector:
@@ -46,27 +36,24 @@ spec:
       containers:
         - name: grafana
           image: grafana/grafana:10.4.2
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
-          env:
-            - name: GF_SECURITY_ADMIN_USER
-              valueFrom:
-                secretKeyRef:
-                  name: grafana-secret
-                  key: admin-user
-            - name: GF_SECURITY_ADMIN_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: grafana-secret
-                  key: admin-password
-          volumeMounts:
-            - name: config
-              mountPath: /etc/grafana/grafana.ini
-              subPath: grafana.ini
-      volumes:
-        - name: config
-          configMap:
-            name: grafana-config
+          envFrom:
+            - secretRef:
+                name: grafana-secret
+          readinessProbe:
+            httpGet:
+              path: /login
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /login
+              port: 3000
+            initialDelaySeconds: 30
+            periodSeconds: 20
 
 ---
 apiVersion: v1
@@ -75,10 +62,10 @@ metadata:
   name: grafana
   namespace: monitoring
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: grafana
   ports:
     - port: 3000
       targetPort: 3000
-      nodePort: 32000
+      protocol: TCP
