--- a/grafana.yaml
+++ b/grafana.yaml
@@ -4,9 +4,9 @@ kind: Namespace
 metadata:
   name: monitoring
 
-############################################
+#################################################
 # PROMETHEUS CONFIG
-############################################
+#################################################
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -19,26 +19,13 @@ data:
       scrape_interval: 15s
 
     scrape_configs:
-      - job_name: 'kubernetes-pods'
-        kubernetes_sd_configs:
-          - role: pod
-        relabel_configs:
-          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
-            action: keep
-            regex: "true"
-          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
-            action: replace
-            target_label: __metrics_path__
-            regex: (.+)
-          - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
-            action: replace
-            regex: ([^:]+)(?::\d+)?;(\d+)
-            replacement: $1:$2
-            target_label: __address__
+      - job_name: 'prometheus'
+        static_configs:
+          - targets: ['localhost:9090']
 
-############################################
-# PROMETHEUS DEPLOYMENT
-############################################
+#################################################
+# PROMETHEUS
+#################################################
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -83,18 +70,17 @@ spec:
   ports:
     - port: 9090
       targetPort: 9090
+      protocol: TCP
 
-############################################
+#################################################
 # GRAFANA DATASOURCE AUTO CONFIG
-############################################
+#################################################
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-datasource
   namespace: monitoring
-  labels:
-    grafana_datasource: "1"
 data:
   datasource.yaml: |
     apiVersion: 1
@@ -105,9 +91,9 @@ data:
         url: http://prometheus.monitoring.svc.cluster.local:9090
         isDefault: true
 
-############################################
-# GRAFANA DEPLOYMENT
-############################################
+#################################################
+# GRAFANA
+#################################################
 ---
 apiVersion: v1
 kind: Secret
@@ -164,3 +150,4 @@ spec:
   ports:
     - port: 3000
       targetPort: 3000
+      protocol: TCP
